--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,13 +29,15 @@ services:
     depends_on:
       - db
   web :
-    image: node:11.1.0
-    ports:
-      - 8080:8080
+    build:
+      context: frontend
+      dockerfile: Dockerfile
+
     command: yarn dev
-    working_dir: /webapp
     volumes:
       - ./frontend:/webapp
+    ports:
+    - 8080:8080
     environment:
       - HOST=0.0.0.0
       - PORT=8080
