--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,5 @@
 FROM node:11.1.0
 RUN mkdir /webapp
-COPY package.json yarn.lock /webapp/
+COPY . /webapp/
 WORKDIR /webapp
 RUN yarn install
-COPY . /webapp
