fix config docker + routes name in small caps

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.2'
-volumes: 
+volumes:
   postgres-data:
 services:
   db:
     image: postgres
-    volumes: 
+    volumes:
       - ./postgres-data:/var/lib/postgresql/data
     ports:
       - "5432:5432" #TODO for debug only
-    environment: 
+    environment:
       - POSTGRES_USER=inspector
       - POSTGRES_PASSWORD=inspector #TODO Remove into .env file !
 
@@ -33,6 +33,7 @@ services:
       context: frontend
       dockerfile: Dockerfile
 
+    entrypoint: /webapp/entrypoint.sh
     command: yarn dev
     volumes:
       - ./frontend:/webapp
@@ -41,4 +42,3 @@ services:
     environment:
       - HOST=0.0.0.0
       - PORT=8080
-
