--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "vee-validate": "^2.1.3",
     "vue": "^2.5.2",
     "vue-cookies": "^1.5.7",
     "vue-router": "^3.0.1",
