--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "socket.io-client": "^2.1.1",
     "vee-validate": "^2.1.3",
     "vue": "^2.5.2",
     "vue-cookies": "^1.5.7",
+    "vue-native-websocket": "^2.0.12",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
